feat: Add Scroll to top button

--- a/projects/landing-page/index.html
+++ b/projects/landing-page/index.html
@@ -62,6 +62,7 @@
     <footer class="page__footer">
         <p>&copy Udacity</p>
     </footer>
+    <button id="topScrollBtn" title="Scroll to top">Top</button>
     <script src="js/app.js"></script>
 </body>
 </html>
