--- a/projects/weather-journal-app/website/index.html
+++ b/projects/weather-journal-app/website/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Weather Journal</title>
-<link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Weather Journal</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
  <body>
 <div id = "app">
@@ -29,7 +30,7 @@
   </div>
   </div>
   </div>
-<script src="app.js" type="text/javascript"></script>
+<script src="app.js"></script>
 
 </body>
 </html>
